# AlphaZero-Lite-CS4260

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_cppmcts.sh  pyproject.toml  requirements.txt
agents/: alphazero.py  evaluation.py  game_spec.py  inference.py  mcts.py  mcts_backend.pyi  replay_buffer.py  utils.py
agents/cpp/: mcts_binder.cpp  mcts_core.cpp  mcts_core.h
agents/networks/: backgammon.py  connect_four.py  factory.py
configs/: backgammon_adapted.yaml  backgammon_base.yaml  connect_four_base.yaml
scripts/: tournament_worker.py  train.py
ui/: app.py
ui/components/: backgammon_board.py  connect_four_board.py  move_selector.py  player_profile.py  side_panel.py
ui/core/: ai_agent.py  backgammon_engine.py  connect_four_engine.py  match_manager.py
ui/views/: backgammon.py  connect_four.py  game_template.py  home.py
